{
    "name": "PlayerController",
    "maps": [
        {
            "name": "DesktopPlayer",
            "id": "64a25904-820e-4c4d-bb44-591f243ae9ce",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e0b115b9-76cd-480b-945c-b21a52d48dd1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shooting",
                    "type": "Button",
                    "id": "6b277c5c-c0fe-4bfc-b9e0-5124359e4a4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "ca3c4f48-db19-4bac-9a87-d1dcc9e8a175",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "96691646-cf89-426f-8a93-61344d1d09b3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "508566ac-a4a4-4d0e-9103-079689a0c0ec",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "692c8e1c-aa0b-4e31-8422-33f5838678b8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "375ed222-d801-4881-a6cd-e54b8544e8b7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2287e24b-21c5-4d57-85ad-71398daa7d73",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "JoystickPlayer",
            "id": "ff3bef6b-b42a-47fd-9c75-cefb5efa7485",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c7cc2d6b-53e6-4ec3-812b-78720bd453e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shooting",
                    "type": "Button",
                    "id": "d5d5f212-a2b0-4004-816f-bff0a0628402",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8cc62e56-754a-4958-835c-46dce30e4a0c",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbaa7842-3c23-4efd-9282-64c35e4a220c",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}